{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 56,
  "lineage": "6cd274b8-524b-4418-37dd-d6eddc803e89",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-02c689a2571691990",
            "id": "rtb-02c689a2571691990",
            "owner_id": "670352645433",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "docker-private"
            },
            "vpc_id": "vpc-0d420a504f3ca87d0"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05062c82c75ed4335",
            "arn": "arn:aws:ec2:us-east-1:670352645433:instance/i-0c84dc57992b9a273",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c84dc57992b9a273",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "docker",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b307c9eb61a552e5",
            "private_dns": "ip-10-1-1-99.ec2.internal",
            "private_ip": "10.1.1.99",
            "public_ip": "3.82.205.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07ac28b99c29dfe73",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0108cf41b30c2f76d",
            "tags": {
              "Name": "docker_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097f827039f948553"
            ]
          },
          "depends_on": [
            "aws_key_pair.docker",
            "aws_security_group.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05062c82c75ed4335",
            "arn": "arn:aws:ec2:us-east-1:670352645433:instance/i-0a13a16d65e6fb96c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a13a16d65e6fb96c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "docker",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d102e7c52821f83f",
            "private_dns": "ip-10-1-1-245.ec2.internal",
            "private_ip": "10.1.1.245",
            "public_ip": "54.234.175.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-064a55fcf81c1ca77",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0108cf41b30c2f76d",
            "tags": {
              "Name": "docker_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097f827039f948553"
            ]
          },
          "depends_on": [
            "aws_key_pair.docker",
            "aws_security_group.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05062c82c75ed4335",
            "arn": "arn:aws:ec2:us-east-1:670352645433:instance/i-020df647fdf4924d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-020df647fdf4924d9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "docker",
            "monitoring": false,
            "primary_network_interface_id": "eni-07fa9d3ac64416289",
            "private_dns": "ip-10-1-1-86.ec2.internal",
            "private_ip": "10.1.1.86",
            "public_ip": "3.86.232.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cbe254538fe195cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0108cf41b30c2f76d",
            "tags": {
              "Name": "docker_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097f827039f948553"
            ]
          },
          "depends_on": [
            "aws_key_pair.docker",
            "aws_security_group.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e3de517f6ee0ddce",
            "owner_id": "670352645433",
            "tags": {
              "Name": "docker-igw01"
            },
            "vpc_id": "vpc-0d420a504f3ca87d0"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ca5d6b9b5c939c8d",
            "owner_id": "670352645433",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3de517f6ee0ddce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "docker-public"
            },
            "vpc_id": "vpc-0d420a504f3ca87d0"
          },
          "depends_on": [
            "aws_internet_gateway.igw01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dba7ab6c6b684dd1",
            "route_table_id": "rtb-0ca5d6b9b5c939c8d",
            "subnet_id": "subnet-08d539dad8790fa2e"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a45c36d7702bd9d1",
            "route_table_id": "rtb-0ca5d6b9b5c939c8d",
            "subnet_id": "subnet-0ddc5cab1eca4d114"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.private2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bf39f396b868675",
            "route_table_id": "rtb-0ca5d6b9b5c939c8d",
            "subnet_id": "subnet-0108cf41b30c2f76d"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumphost",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670352645433:security-group/sg-01a21e6c623709ce5",
            "description": "Used for Jump host access",
            "egress": [],
            "id": "sg-01a21e6c623709ce5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "docker-sg_jumphost",
            "name_prefix": null,
            "owner_id": "670352645433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker-sg_jumphost"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d420a504f3ca87d0"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670352645433:security-group/sg-03a3c0a537c9bde90",
            "description": "Used for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a3c0a537c9bde90",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "docker-sg_private",
            "name_prefix": null,
            "owner_id": "670352645433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker-sg_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d420a504f3ca87d0"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670352645433:security-group/sg-097f827039f948553",
            "description": "Used for Public and Private instances for load balancer access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097f827039f948553",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "Allow communication between docker instances",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              }
            ],
            "name": "docker-sg_public",
            "name_prefix": null,
            "owner_id": "670352645433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker-sg_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d420a504f3ca87d0"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670352645433:subnet/subnet-08d539dad8790fa2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.10.0/24",
            "id": "subnet-08d539dad8790fa2e",
            "map_public_ip_on_launch": false,
            "owner_id": "670352645433",
            "tags": {
              "Name": "docker-private1"
            },
            "vpc_id": "vpc-0d420a504f3ca87d0"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670352645433:subnet/subnet-0ddc5cab1eca4d114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.20.0/24",
            "id": "subnet-0ddc5cab1eca4d114",
            "map_public_ip_on_launch": false,
            "owner_id": "670352645433",
            "tags": {
              "Name": "docker-private2"
            },
            "vpc_id": "vpc-0d420a504f3ca87d0"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670352645433:subnet/subnet-0108cf41b30c2f76d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0108cf41b30c2f76d",
            "map_public_ip_on_launch": true,
            "owner_id": "670352645433",
            "tags": {
              "Name": "docker-public"
            },
            "vpc_id": "vpc-0d420a504f3ca87d0"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670352645433:vpc/vpc-0d420a504f3ca87d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-099a361a0398c47bf",
            "default_route_table_id": "rtb-02c689a2571691990",
            "default_security_group_id": "sg-04491ede1dfe2ccef",
            "dhcp_options_id": "dopt-944919ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d420a504f3ca87d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02c689a2571691990",
            "owner_id": "670352645433",
            "tags": {
              "Name": "docker"
            }
          }
        }
      ]
    }
  ]
}